fix: prevent fildsets that overflow the page
Part of request #39759: Get Rid of Flaming Parrot in Trackers

What has been fixed?
On the new field admin page, if a field has too many LabelDecorators,
its pane overflows the page.

This patch fixes this by allowing LabelDecorators to be wrapped.
By using the `flex-shrink` value (second value) of the `flex` property.

To stay consistent, the edit button is placed at the top right of the
fieldset.

--- a/plugins/tracker/scripts/tracker-admin-fields/src/styles/_dragndrop.scss
+++ b/plugins/tracker/scripts/tracker-admin-fields/src/styles/_dragndrop.scss
@@ -44,7 +44,7 @@
 }
 
 .draggable-form-element {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
 }
 
 .draggable-handle-container {
